welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.error
arrayCount9:5: error: ')' expected but '=' found.
    if(nums[i]=9){
              ^arrayCount9:9: error: illegal start of simple expression
  }
  ^