welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.code
def arrayCount9(nums:Array[Int]): Int = {
  var longueurT=nums.length
  var max =nums(0)
  for(i<-1 to longueurT){
    if(nums[i]=9){
      return i
    }
   
  }
}
